...
  FloatingActionButton(
      onClick = {
        if (!isConnected) {
          Toast.makeText(context, R.string.no_internet_connection, Toast.LENGTH_SHORT).show()
        } else navigationActions.navigateTo(Screen.ADD_ACTIVITY)
      },
      modifier = Modifier.testTag("createActivityButton")) {
        Icon(
            Icons.Outlined.Add,
            contentDescription = stringResource(R.string.floating_button),
            modifier = Modifier.testTag("addIcon"))
      }
}
...
    activityToDelete: Activity?,
    tripsViewModel: TripsViewModel,
    confirmButtonOnClick: () -> Unit,
) {

  AlertDialog(
      modifier = Modifier.testTag("deleteActivityAlertDialog"),
      onDismissRequest = onDismissRequest,
      title = { Text(stringResource(R.string.delete_activity)) },
      text = { Text(stringResource(R.string.delete_activity_confirmation)) },
      confirmButton = {
        TextButton(
            modifier = Modifier.testTag("confirmDeleteButton"),
            onClick = {
              confirmButtonOnClick()
              // Perform the deletion
              activityToDelete?.let { activity -> tripsViewModel.removeActivityFromTrip(activity) }
            }) {
              Text(stringResource(R.string.delete))
...
    selectedFilters: Set<ActivityType>,
    onFilterChanged: (ActivityType, Boolean) -> Unit,
    onDismiss: () -> Unit
) {
  AlertDialog(
      onDismissRequest = { onDismiss() },
      modifier = Modifier.testTag("filterActivityAlertDialog"),
      title = {
        Text(
            text = stringResource(R.string.filter_activity_type),
            style = MaterialTheme.typography.titleMedium)
      },
      text = {
...
                    }
              }
            }
      },
      // Confirm button which closes the dialog
      confirmButton = {
        TextButton(onClick = { onDismiss() }, modifier = Modifier.testTag("confirmButtonDialog")) {
          Text(stringResource(R.string.confirm_text))
        }
      })
}

