...
              selectedFilters.isEmpty() || activity.activityType in selectedFilters
            }
            .sumOf { it.estimatedPrice }
  }

  Scaffold(
      modifier = Modifier.testTag("activitiesScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute(),
            userViewModel = userViewModel,
...
              Box(
                  modifier = Modifier.fillMaxWidth().fillMaxHeight(),
                  contentAlignment = Alignment.CenterStart) {
                    SearchBar(
                        placeholderId = R.string.activities_searchbar_placeholder,
                        onQueryChange = { searchQuery = it },
                        modifier = Modifier.fillMaxWidth().height(50.dp).testTag("searchField"))
                  }
            },
            actions = {
              ActivityFilter(
                  selectedFilters = selectedFilters,
                  onFiltersChanged = { newFilters -> selectedFilters = newFilters })
...
      },
      content = { pd ->
        if (drafts.isEmpty() && final.isEmpty()) {
          // Display empty prompt if there are no activities
          Box(modifier = Modifier.padding(pd).fillMaxSize(), contentAlignment = Alignment.Center) {
            Text(
                modifier = Modifier.testTag("emptyActivitiesPrompt"),
                text = stringResource(R.string.no_activities_scheduled),
            )
          }
        } else {
          val isEditable = !isReadOnly
          val buttonType = if (isEditable) ButtonType.DELETE else ButtonType.NOTHING
          LazyColumn(
              modifier = Modifier.padding(pd).fillMaxWidth().testTag("lazyColumn"),
              verticalArrangement = Arrangement.spacedBy(10.dp, Alignment.Top),
          ) {
            item {
              if (drafts.isNotEmpty()) {
                Text(
                    text = stringResource(R.string.drafts),
...
