...
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">386260395468-2n5ilio1go0tnvq1pddj087e0gekcmei.apps.googleusercontent.com</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="confirm_text">Confirm</string>
    <string name="filter_activities">Filter Activities</string>
    <string name="drafts">Drafts</string>
    <string name="final_activities">Final</string>
    <string name="filter_activity_type">Filter activities by type</string>
    <string name="no_user_data">No user data available</string>
    <string name="no_pending_requests">You\'re all caught up! No pending requests.</string>
    <string name="pending_friend_requests">%1$d Pending Friend Requests</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="accept">Accept</string>
...
    <string name="no_trip_selected">No trip selected. Should not happen</string>
    <string name="no_day_selected">No day selected. Should not happen</string>
    <string name="no_activities">You have no activities yet.</string>
    <string name="delete">Delete</string>

<!-- Activities -->
    <string name="no_activities_scheduled">"No activities have been scheduled yet."</string>
    <string name="location_text">Location</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="delete_activity_confirmation">Are you sure you want to delete this activity?</string>

<!-- Add Activity -->
    <string name="create_activity">Create a New Activity</string>
...
